Added some figures to third chapter

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -207,8 +207,42 @@
 }
 @MISC{
 	tccDanilo,
-	TITLE = "Danilo Filippo Reiszel Pereira",
-	AUTHOR = "Aprendizado de máquina e aprendizado profundo para apoio à decisão no mercado financeiro",
+	AUTHOR = "Danilo Filippo Reiszel Pereira",
+	TITLE = "Aprendizado de máquina e aprendizado profundo para apoio à decisão no mercado financeiro",
 	SCHOOL = "Univeridade Federal de do Rio de Janeiro",
 	YEAR = "2018",
 }
+
+@MISC{
+	neuronio,
+	TITLE = "O que é neurônio?",
+	AUTHOR = "Brasil Escola",
+	HOWPUBLISHED = "https://brasilescola.uol.com.br/o-que-e/biologia/o-que-e-neuronio.htm",
+	YEAR= "2019"
+	
+}
+
+@MISC{
+	neuronio_artificial,
+	TITLE = "Redes Neurais Artificiais",
+	AUTHOR = "Anderson Vinicius",
+	HOWPUBLISHED = "https://medium.com/@avinicius.adorno/redes-neurais-artificiais-418a34ea1a39",
+	YEAR= "2017"
+}
+
+@MISC{
+	funcoes_ativacao,
+	TITLE = "Redes Neurais Artificiais",
+	AUTHOR = "Sagar Sharma",
+	HOWPUBLISHED = "https://towardsdatascience.com/activation-functions-neural-networks-1cbd9f8d91d6",
+	YEAR= "2017"
+}
+
+@MISC{
+	tanh,
+	TITLE = "tanh-activation-function",
+	AUTHOR = "Saugat Bhattarai",
+	HOWPUBLISHED = "https://saugatbhattarai.com.np/what-is-activation-functions-in-neural-network-nn/logistic-sigmoid-unipolar-tanh-bipolar/",
+	YEAR= "2018"
+}
+
