Added more figures

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -246,3 +246,34 @@
 	YEAR= "2018"
 }
 
+@MISC{
+	relu,
+	TITLE = "ReLU : Not a Differentiable Function: Why used in Gradient Based Optimization? and Other Generalizations of ReLU.",
+	AUTHOR = "Kanchan Sarkar",
+	HOWPUBLISHED = "https://medium.com/@kanchansarkar/relu-not-a-differentiable-function-why-used-in-gradient-based-optimization-7fef3a4cece",
+	YEAR= "2018"
+}
+
+@MISC{
+	grad_desc,
+	TITLE = "Gradient Descent Algorithm and Its Variants",
+	AUTHOR = "Imad Dabbura",
+	HOWPUBLISHED = "https://towardsdatascience.com/gradient-descent-algorithm-and-its-variants-10f652806a3",
+	YEAR= "2017"
+}
+
+@MISC{
+	mlp,
+	TITLE = "Rede Neural Perceptron Multicamadas",
+	AUTHOR = "Sandro Moreira",
+	HOWPUBLISHED = "https://medium.com/ensina-ai/rede-neural-perceptron-multicamadas-f9de8471f1a9",
+	YEAR= "2018"
+}
+
+@book{
+	ivan_nunes,
+	title   = {Redes neurais artificiais para engenharia e ciências aplicadas},
+	author = {Silva, Ivan Nunes da and Spatti, Danilo Hernane and Flauzino, Rogério Andrade},
+	year = {2010},
+	publisher = {Artliber Editora}
+}
