Added references in chapter 3

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -277,3 +277,87 @@
 	year = {2010},
 	publisher = {Artliber Editora}
 }
+
+@MISC{
+	validacao_cruzada,
+	TITLE = "Bias vs. Variância (Parte 2) ",
+	AUTHOR = "
+	Eric Couto ",
+	HOWPUBLISHED = "https://ericcouto.wordpress.com/2013/07/18/bias-vs-variancia-parte-2/",
+	YEAR= "2013"
+}
+
+@book{
+	Gurney,
+	author = {Gurney, Kevin},
+	title = {An  Introduction to Neural Networks},
+	year = {1997},
+	isbn = {1857286731},
+	publisher = {Taylor \& Francis, Inc.},
+	address = {Bristol, PA, USA},
+} 
+
+@book{
+	Bishop,
+	author = {Bishop, Christopher M.},
+	title = {Pattern Recognition and Machine Learning (Information Science and Statistics)},
+	year = {2006},
+	isbn = {0387310738},
+	publisher = {Springer-Verlag},
+	address = {Berlin, Heidelberg},
+} 
+
+@article{
+	K_He,
+	author    = {Kaiming He and
+	Xiangyu Zhang and
+	Shaoqing Ren and
+	Jian Sun},
+	title     = {Delving Deep into Rectifiers: Surpassing Human-Level Performance on
+	ImageNet Classification},
+	journal   = {CoRR},
+	volume    = {abs/1502.01852},
+	year      = {2015},
+	url       = {http://arxiv.org/abs/1502.01852},
+	archivePrefix = {arXiv},
+	eprint    = {1502.01852},
+	timestamp = {Wed, 17 Apr 2019 17:23:45 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/HeZR015},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@INPROCEEDINGS{
+	backprop,
+	author={ {Hecht-Nielsen}},
+	booktitle={International 1989 Joint Conference on Neural Networks},
+	title={Theory of the backpropagation neural network},
+	year={1989},
+	volume={},
+	number={},
+	pages={593-605 vol.1},
+	keywords={biocybernetics;neural nets;neurophysiology;parallel architectures;physiological models;backpropagation neural network;architecture;performance measurement;function approximation;neurophysiological model;mammalian brain;corticocortical learning;cerebral cortex;Cybernetics;Neural networks;Nervous system;Parallel architectures;Biological system modeling},
+	doi={10.1109/IJCNN.1989.118638},
+	ISSN={},
+	month={},
+}
+
+@article{
+	mlp_atmosfera,
+	added-at = {2011-01-24T09:52:55.000+0100},
+	author = {Gardner, MW and Dorling, SR},
+	biburl = {https://www.bibsonomy.org/bibtex/25bade65c44df9ccc9c07aca504fe3d9c/a.guidali},
+	date-added = {2010-05-25 17:01:14 +0200},
+	date-modified = {2010-05-25 17:01:14 +0200},
+	interhash = {af06a16cc53134ae970625bd736bf9d8},
+	intrahash = {5bade65c44df9ccc9c07aca504fe3d9c},
+	journal = {Atmospheric Environment},
+	keywords = {imported},
+	number = {14-15},
+	pages = {2627--2636},
+	publisher = {Elsevier},
+	timestamp = {2011-01-24T09:52:56.000+0100},
+	title = {{Artificial neural networks (the multilayer perceptron)---A review of applications in the atmospheric sciences}},
+	volume = 32,
+	year = 1998
+}
+
