--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap3.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap3.tex
@@ -258,7 +258,7 @@ b = \frac{1}{ 1 + \beta} = \frac{1}{1 + \frac{\sqrt{1 - G_b²}}{G_b} \tan(\frac{\
 \end{figure}
 
 \section{Redes Neurais Artificiais}
-\paragraph{}Redes Neurais artificiais são modelos computacionais que tentam reproduzir o comportamento observado na estrutura cerebral dos seres vivos. O neurônio pode ser considerado como a célula básica de processamento do cérebro humano. Sua estrutura é divida em três partes principais \cite{ivan_nunes}:
+\paragraph{}Redes Neurais artificiais são modelos computacionais que tentam reproduzir o comportamento observado na estrutura cerebral dos seres vivos. O neurônio pode ser considerado como a célula básica de processamento do cérebro humano. Sua estrutura é divida em três partes principais \cite{apostilaCaloba}  \cite{ivan_nunes} \cite{Gurney}:
 
 \begin{figure}[H]
 	\begin{center}
@@ -267,7 +267,7 @@ b = \frac{1}{ 1 + \beta} = \frac{1}{1 + \frac{\sqrt{1 - G_b²}}{G_b} \tan(\frac{\
 				
 				\includegraphics[height=0.25\textheight]{neuronio_biologico.jpg}
 				
-				\caption[\small{Neurônio \cite{neuronio} }]{\label{neuronio_biologico} \small{Neurônio. \cite{neuronio}}}
+				\caption[\small{Neurônio \cite{neuronio} }]{\label{neuronio_biologico} \small{Neurônio. Fonte: \cite{neuronio}}}
 				
 			\end{center}	
 		}
@@ -290,7 +290,7 @@ b = \frac{1}{ 1 + \beta} = \frac{1}{1 + \frac{\sqrt{1 - G_b²}}{G_b} \tan(\frac{\
 				
 				\includegraphics[width=0.8\textwidth]{neuronio_artificial.jpg}
 				
-				\caption[\small{Neurônio \cite{neuronio_artificial} }]{\label{neuronio_artificial} \small{Neurônio Artificial. \cite{neuronio_artificial}}}
+				\caption[\small{Neurônio \cite{neuronio_artificial} }]{\label{neuronio_artificial} \small{Neurônio Artificial. Fonte: \cite{neuronio_artificial}}}
 				
 			\end{center}	
 		}
@@ -301,7 +301,7 @@ b = \frac{1}{ 1 + \beta} = \frac{1}{1 + \frac{\sqrt{1 - G_b²}}{G_b} \tan(\frac{\
 
 
 \paragraph{}A entrada do neurônio é um vetor $X = [x_1, x_2 ..., x_n]$
-análogo ao sinais elétricos transmitidos no cérebro humano. Essa entrada é ponderada por um conjunto de pesos $W = [w_1, w_2, ..., w_N]$ e somada em um combinador linear junto com um limiar de ativação $\theta$. O somatório das entradas gera um potencial de ativação $u$, o qual passa por uma função de ativação e gera um sinal de saída que poderá ser propagado para outros neurônios. As informações descritas acima se resumem nas seguintes equações:
+análogo ao sinais elétricos transmitidos no cérebro humano. Essa entrada é ponderada por um conjunto de pesos $W = [w_1, w_2, ..., w_N]$ e somada em um combinador linear junto com um limiar de ativação $\theta$. O somatório das entradas gera um potencial de ativação $u$, o qual passa por uma função de ativação e gera um sinal de saída que poderá ser propagado para outros neurônios \cite{ivan_nunes}. As informações descritas acima se resumem nas seguintes equações:
 
 \begin{equation} \label{eq_neuronio}
  u_j = \sum_{i = 1}^{N} w_{ji} \cdot x_i - \theta
@@ -317,7 +317,7 @@ y = g(u)
 u = \sum_{i = 0}^{n} w_i \cdot x_i
 \end{equation}
 
-\paragraph{}A função de ativação pode ter diferentes formatos. Caso seja identidade, obtém se um regressor linear [citar bishop]. Este tipo de abordagem traz uma grande desvantagem, pois a saída do sistema sempre será linear. Isto vem do fato de que uma composição de transformações lineares é também uma transformação linear. Sendo assim, nas redes neurais são utilizadas funções não-lineares. Alguns exemplos são:
+\paragraph{}A função de ativação pode ter diferentes formatos. Caso seja identidade, obtém se um regressor linear \cite{Bishop}. Este tipo de abordagem traz uma grande desvantagem, pois a saída do sistema sempre será linear. Isto vem do fato de que uma composição de transformações lineares é também uma transformação linear. Sendo assim, nas redes neurais são utilizadas funções não-lineares. Alguns exemplos são:
 \begin{itemize}
 	\item {\textbf{Função Logística: } 
 		\begin{equation} \label{func_logistica}
@@ -345,7 +345,7 @@ u = \sum_{i = 0}^{n} w_i \cdot x_i
 		\begin{equation} \label{func_tanh}
 			g(u) = \frac{1 - e^{-\beta u}}{1 + e^{-\beta u}}
 		\end{equation}
-		Onde $-1 \leq g(u) \leq$ para qualquer u e assim como em \ref{funcao_logistica}, $\beta$ também modifica a inclinação da reta.
+		Onde $-1 \leq g(u) \leq$ para qualquer u e assim como em \ref{func_logistica}, $\beta$ também modifica a inclinação da reta.
 	}
 
 \begin{figure}[H]
@@ -365,7 +365,7 @@ u = \sum_{i = 0}^{n} w_i \cdot x_i
 \end{figure}
 
 
-	\item {\textbf{Unidade Linear Retificada - ReLU: [citar Kaming he]}
+	\item {\textbf{Unidade Linear Retificada - ReLU \cite{K_He}:}
 		\begin{equation} \label{func_relu}
 			g(u) = \max(0, u)
 		\end{equation}
@@ -394,7 +394,7 @@ u = \sum_{i = 0}^{n} w_i \cdot x_i
 \paragraph{}As funções de ativação \ref{func_logistica} e \ref{func_tanh} são deriváveis em todos os pontos e a \ref{func_relu} só não é derivável no ponto zero, porém contorna-se essa limitação fazendo $g'(0) = 0$. A ReLU tem sido essenciais para o estado da arte de redes neurais [citar kaming he]. Essa propriedade será utilizada pelos algoritmos de treinamento baseados no gradiente do erro.
 
 \subsection{Backpropagation}
-\paragraph{}O algoritmo de backpropagtion é bastante utilizado no treinamento de de redes neurais e utiliza o gradiente do erro como base dos cálculos, assim como mencionado anteriormente. Busca-se mover o vetor dos pesos na direção do mínimo local. A expressão de atualização dos pesos é da seguinte forma:
+\paragraph{}O algoritmo de backpropagtion é bastante utilizado no treinamento de de redes neurais e utiliza o gradiente do erro como base dos cálculos, assim como mencionado anteriormente \cite{Bishop} \cite{backprop}. Busca-se mover o vetor dos pesos na direção do mínimo local. A expressão de atualização dos pesos é da seguinte forma:
 \begin{equation} \label{grad_desc}
  w^{(\tau + 1)} = w^{(\tau)} - \eta\nabla E_n w^{(\tau)}
 \end{equation}
@@ -434,7 +434,7 @@ Y^{(1)} = g(\sum_{i = 0}^{N} W_{ji}^{(1)} \cdot X_i)
 Y_{P}^{(H)} = g(\sum_{i = 0}^{M} W_{pi}^{(H)} \cdot Y_{i}^{(H-1)})
 \end{equation}
 
-\paragraph{}As redes MLP tem sido utilizadas em diferentes classes de problemas como classificação de elementos e previsão de séries temporais. [citar exemplos] [citar calôba]. Com o grande crescimento do número de dados disponível para utilização e o desenvolvimento das tecnologias computacionais, têm-se atualmente redes com muitas camadas e neurônios em busca de obter maior capacidade de separação, previsão, além de poder obter informações relevantes sobre neurônios intermediários da rede. [citar trabalhos com deep learning].
+\paragraph{}As redes MLP tem sido utilizadas em diferentes classes de problemas como classificação de elementos e previsão de séries temporais \cite{apostilaCaloba} \cite{mlp_atmosfera}. [citar exemplos] [citar calôba]. Com o grande crescimento do número de dados disponível para utilização e o desenvolvimento das tecnologias computacionais, têm-se atualmente redes com muitas camadas e neurônios em busca de obter maior capacidade de separação, previsão, além de poder obter informações relevantes sobre neurônios intermediários da rede. [citar trabalhos com deep learning].
 
 \begin{figure}[H]
 	\begin{center}
@@ -456,11 +456,48 @@ Y_{P}^{(H)} = g(\sum_{i = 0}^{M} W_{pi}^{(H)} \cdot Y_{i}^{(H-1)})
 \paragraph{}Para que a rede consiga de fato "aprender" com os dados é necessário realizar o treinamento. Para que o mesmo seja bem sucedido é necessário atentar para alguns fatores como: 
 \begin{itemize}
 	\item {\textbf{Inicialização dos pesos: }Os pesos não devem se iniciados com o mesmo valor, pois isto faria com que cada neurônio interprete a entrada da mesma forma, gerando então uma estrutura simétrica.[citar kaiming he, yam e ryanhsiao]}
-	\item {\textbf{Taxa de aprendizado: }Caso o fator $\eta$ da fórmula \ref{grad_desc} seja um valor muito grande, o algoritmo não conseguirá convergir para um mínimo, porém se $\eta$ for um número muito grande, o treinamento pode levar muita épocas até convergir. Cabe então a quem especifica os parâmetros da rede neural escolher um $\eta$ adequado de forma com que a convergência ocorra e não demore demais.}
-	\item {\textbf{Divisão dos dados de entrada: }Uma prática comum para se obter resultados consistentes é dividir os dados em um conjunto de testes e outro de validação, de forma que o conjunto de testes não seja usado no treinamento, sendo assim usado para verificar o quão bom são os resultados da rede para dados desconhecidos. Outra prática comum é dividir o conjunto de treinamento em treino e validação e utilizar a validação cruzada, de forma a realizar vários treinos com a mesma estrutura, permitindo um maior conhecimento sobre o comportamento da rede [citar papers de cross validation].}
-	\item {\textbf{Curva de aprendizado: }É comum também utilizar um gráfico do erro na saída em função da época de treinamento para o conjunto de treinamento e validação. Através do mesmo é possível observar características como overfitting e underfitting e selecionar o conjunto de pesos que tem o melhor compromisso.}
-	\item {\textbf{Quantidade de dados $X$ complexidade da rede: } Outro fator importante a ser observado é a quantidade de dados disponível para treinamento, visto que quanto maior a complexidade estrutural da rede, maior a capacidade de gerar funções complexa, portanto torna-se necessário uma maior quantidade de dados para que a mesma seja treinada sem o efeito de overfitting.}
+	
 	\item {\textbf{Função custo: } Há necessidade de definir qual função de custo será utilizada na avaliação dos resultados da rede. A função mais comum é o erro médio quadrático - \textit{MSE}, porém dependendo da análise que se deseja fazer e do problema a ser resolvido, outras funções podem ser utilizadas como a o erro médio quadrático - \textit{RMSE}, erro absoluto -\textit{MAE} e acurácia - \textit{ACC} [citar paper com essas referências]}
+		\item {\textbf{Curva de aprendizado: }É comum também utilizar um gráfico do erro na saída em função da época de treinamento para o conjunto de treinamento e validação. Através do mesmo é possível observar características como overfitting e underfitting e selecionar o conjunto de pesos que tem o melhor compromisso.}
+		
+	\item {\textbf{Quantidade de dados $X$ complexidade da rede: } Outro fator importante a ser observado é a quantidade de dados disponível para treinamento, visto que quanto maior a complexidade estrutural da rede, maior a capacidade de gerar funções complexa, portanto torna-se necessário uma maior quantidade de dados para que a mesma seja treinada sem o efeito de overfitting.}
+	
+	\item {\textbf{Taxa de aprendizado: }Caso o fator $\eta$ da fórmula \ref{grad_desc} seja um valor muito grande, o algoritmo não conseguirá convergir para um mínimo, porém se $\eta$ for um número muito grande, o treinamento pode levar muita épocas até convergir. Cabe então a quem especifica os parâmetros da rede neural escolher um $\eta$ adequado de forma com que a convergência ocorra e não demore demais.}
+	\begin{figure}[H]
+		\begin{center}
+			{
+				\begin{center}
+					
+					\includegraphics[width=0.7\textwidth]{learning_rate.jpg}
+					
+					\caption[\small{Influência da taxa de aprendizado \cite{grad_desc} }]{\label{l_rate} \small{Influência da taxa de aprendizado. Fonte: \cite{grad_desc}}}
+					
+				\end{center}	
+			}
+			
+		\end{center}
+		
+	\end{figure}
+	
+	\item {\textbf{Divisão dos dados de entrada: }Uma prática comum para se obter resultados consistentes é dividir os dados em um conjunto de testes e outro de validação, de forma que o conjunto de testes não seja usado no treinamento, sendo assim usado para verificar o quão bom são os resultados da rede para dados desconhecidos. Outra prática comum é dividir o conjunto de treinamento em treino e validação e utilizar a validação cruzada, de forma a realizar vários treinos com a mesma estrutura, permitindo um maior conhecimento sobre o comportamento da rede [citar papers de cross validation].}
+		\begin{figure}[H]
+		\begin{center}
+			{
+				\begin{center}
+					
+					\includegraphics[width=0.7\textwidth]{validacao_cruzada.jpg}
+					
+					\caption[\small{Validacao Cruzadas \cite{validacao_cruzada} }]{\label{validacao_cruzada} \small{Validação cruzada. Fonte: \cite{validacao_cruzada}}}
+					
+				\end{center}	
+			}
+			
+		\end{center}
+		
+	\end{figure}
+	
+
+
 \end{itemize}
 
 
